<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_noticias" />
        <item
            android:id="@+id/nav_dona"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dona" />

        <item
            android:id="@+id/nav_contactanos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contactanos" />
        <item
            android:id="@+id/nav_registrarmascota"
            android:icon="@android:drawable/ic_input_add"
            android:title="Registrar Mascota" />

    </group>
</menu>